chore(gradle): use newer tornadofx version to support all components